<resources>
    <string name="app_name">你窝咩</string>
    <string name="version_number_is_wrong">warming:Can\'t get version info</string>
    <string name="user_login">用户登录</string>
    <string name="stu_register">学生注册</string>
    <string name="sexStr">性别</string>
    <string name="sex_boy">男</string>
    <string name="sex_girl">女</string>
    <string name="department">系部</string>
    <string name="classObj">班级</string>
    <string name="bedroom">寝室</string>
    <string name="register_success">注册成功</string>
    <string name="contacts">联系人</string>
    <string name="chatMsg">消息</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="stuManager">学生管理</string>
    <string name="floorManager">楼宇管理</string>
    <string name="roomManager">寝室管理</string>
    <string name="setting">系统设置</string>
    <string name="readStuInfo">查看学生信息</string>
    <string name="addStuInfo">录入学生信息</string>
    <string name="seaStuInfo">查询学生信息</string>
</resources>
