<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_weight="10">
    <!--菜单-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:orientation="horizontal"
        android:layout_marginBottom="1dp"
        android:layout_alignParentBottom="true"
        >
        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:id="@+id/RbtnGroup"
            >
            <RadioButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:drawableTop="@drawable/man_menu_stu_selected"
                android:button="@null"
                android:text="@string/stuManager"
                android:textAlignment="center"
                android:id="@+id/mainStuManagerRbtn"
                />
            <RadioButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:drawableTop="@drawable/man_menu_floor_selected"
                android:button="@null"
                android:text="@string/floorManager"
                android:textAlignment="center"
                android:id="@+id/mainFloorManagerRbtn"
                />
            <RadioButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:drawableTop="@drawable/man_menu_room_selected"
                android:button="@null"
                android:text="@string/roomManager"
                android:textAlignment="center"
                android:id="@+id/mainRoomManagerRbtn"
                />
            <RadioButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:drawableTop="@drawable/man_menu_setting_selected"
                android:button="@null"
                android:text="@string/setting"
                android:textAlignment="center"
                android:id="@+id/mainSettingRbtn"
                />
        </RadioGroup>
    </LinearLayout>
</LinearLayout>